--- a/lab03/contact.html
+++ b/lab03/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="utf-8">
@@ -13,10 +13,10 @@
     <p>Syracuse, NY, 13244</p>
 
     <p> <a href="mailto:tinfanti@syr.edu"> Tommy Infantino Email</a></p>
-    <p><img src="../images/LI-In-Bug.png" alt="LinkedIn Logo" width="120p"  height="100">
+    <p><img src="../images/LI-In-Bug.png" alt="LinkedIn Logo" width="120"  height="100">
         <a href="https://www.linkedin.com/in/tinfantino12/"> My LinkedIn Profile</a>
-    <p>
-    </p><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2916.0185124468067!2d-76.13640242437671!3d43.04104199180863!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d9f3a03b365f7b%3A0x5d2c30bf13b4c26c!2s801%20University%20Ave%2C%20Syracuse%2C%20NY%2013210!5e0!3m2!1sen!2sus!4v1738191560574!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></p>
+    </p>
+    <p><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2916.0185124468067!2d-76.13640242437671!3d43.04104199180863!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d9f3a03b365f7b%3A0x5d2c30bf13b4c26c!2s801%20University%20Ave%2C%20Syracuse%2C%20NY%2013210!5e0!3m2!1sen!2sus!4v1738191560574!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></p>
 
 </body>
 
