--- a/lab04/contact.html
+++ b/lab04/contact.html
@@ -33,7 +33,7 @@
     <br>
     <br>
 
-    <form action="" method="post"><br>
+    <form  action="https://formspree.io/f/myzkpyez" method="POST"><br>
         <label for="fname">First Name:</label>
         <input type="text" id="fname" name="fname">
         <label for="fname">Last Name:</label>
@@ -45,7 +45,8 @@
     <br>
     <br><input type="submit" value="Submit">
     
-    </form action="https://formspree.io/f/myzkpyez" method="POST">
+    </form>
+    
 </body>
 
 </html>
