--- a/lab04/contact.html
+++ b/lab04/contact.html
@@ -33,7 +33,7 @@
     <br>
     <br>
 
-    <form  action="https://formspree.io/f/myzkpyez" method="POST"><br>
+    <form  action="https://formspree.io/f/myzkpyez" method="post"><br>
         <label for="fname">First Name:</label>
         <input type="text" id="fname" name="fname">
         <label for="fname">Last Name:</label>
@@ -46,7 +46,7 @@
     <br><input type="submit" value="Submit">
     
     </form>
-    
+
 </body>
 
 </html>
