--- a/lab04/contact.html
+++ b/lab04/contact.html
@@ -33,7 +33,7 @@
     <br>
     <br>
 
-    <form  action="https://formspree.io/f/myzkpyez" method="post"><br>
+    <form  action="https://formspree.io/f/myzkpyez" method="POST"><br>
         <label for="fname">First Name:</label>
         <input type="text" id="fname" name="fname">
         <label for="fname">Last Name:</label>
@@ -43,7 +43,7 @@
         <label for="comments">Comments:</label><br>
         <textarea id="comments" name="comments"></textarea>
     <br>
-    <br><input type="submit" value="Submit">
+    <br><input type="submit" value="Submit" name="submit">
     
     </form>
 
