--- a/lab04/contact.html
+++ b/lab04/contact.html
@@ -19,6 +19,8 @@
     <p><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2916.0185124468067!2d-76.13640242437671!3d43.04104199180863!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d9f3a03b365f7b%3A0x5d2c30bf13b4c26c!2s801%20University%20Ave%2C%20Syracuse%2C%20NY%2013210!5e0!3m2!1sen!2sus!4v1738191560574!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></p>
 
     <br>
+    
+    <form  action="https://formspree.io/f/myzkpyez" method="POST">
     <p>Select your age</p>
         <input type="radio" id="age1" name="age" value="10-19">
         <label for="age1">10-19</label>
@@ -31,9 +33,7 @@
         <input type="radio" id="age5" name="age" value="50+">
         <label for="age3">50+</label>
     <br>
-    <br>
-
-    <form  action="https://formspree.io/f/myzkpyez" method="POST"><br>
+   <br>
         <label for="fname">First Name:</label>
         <input type="text" id="fname" name="fname">
         <label for="fname">Last Name:</label>
