--- a/lab08/contact.html
+++ b/lab08/contact.html
@@ -14,7 +14,7 @@
         <a href="skills.html">Skills</a>
     </nav>
     <hr>
-    <h1>Contact</h1>
+    <h1 class="title">Contact</h1>
     <div class="row1">
         <div class="column1">
             <h1></h1>
