--- a/lab13/index.html
+++ b/lab13/index.html
@@ -17,7 +17,7 @@
         <div>
             <img src="../images/banner-copy-2.png" alt="Banner Picture" class="banner">
         </div>
-        <h1 tabindex="4">Tommy Infantino's Biography</h1>
+        <h1>Tommy Infantino's Biography</h1>
         <a href="#main" class="skip">Skip to Main Content</a>
         <p id="main">
             I am currently a sophmore at <strong>Syracuse University</strong> and I am studying Information Management and Technology. With concentrations in cyber security and project management. 
@@ -26,7 +26,7 @@
             I am a very hardworking student, and I have taken classes in Python and HTML. Also, I am apart of a professional fraternity on campus called Kappa Theta Pi. 
         </p>
 
-        <h2 tabindex="5">Personal Information</h2>
+        <h2>Personal Information</h2>
     
         <p>
             Outside of school, I like to play sports and watch movies/TV. The main sports I like to play are Soccer, Basketball, and Football, and I also like to go to the Gym. I also really enjoy watching movies and tv shows, here is a list of some of my favorite movies:
