--- a/lab13/skills.html
+++ b/lab13/skills.html
@@ -19,7 +19,7 @@
         <a href="contact.html">Contact</a> | 
         <a href="skills.html">Skills</a>
     </nav>
-    <h1 class="heading" tabindex="1">
+    <h1 class="heading">
         <a href="#main" class="skip">Skip to Main Content</a>
         Technical Skills
     </h1>
@@ -55,7 +55,7 @@
 
         <div class="flexbox2">
             <aside>
-                <h2 class="other-heading" tabindex="2">
+                <h2 class="other-heading">
                     Other Skills
                 </h2>
                 <p class="other-skills">
