--- a/lab13/contact.html
+++ b/lab13/contact.html
@@ -38,15 +38,15 @@
             <form action="https://formspree.io/f/myzkpyez" method="POST" class="form">
     
             <p>Select your age:</p>
-            <input type="radio" id="age1" name="age" value="10-19">
+            <input type="radio" id="age1" value="10-19">
             <label for="age1">10-19</label>
-            <input type="radio" id="age2" name="age" value="20-29">
+            <input type="radio" id="age2" value="20-29">
             <label for="age2">20-29</label>
-            <input type="radio" id="age3" name="age" value="30-39">
+            <input type="radio" id="age3" value="30-39">
             <label for="age3">30-39</label>
-            <input type="radio" id="age4" name="age" value="40-49">
+            <input type="radio" id="age4" value="40-49">
             <label for="age3">40-49</label>
-            <input type="radio" id="age5" name="age" value="50+">
+            <input type="radio" id="age5" value="50+">
             <label for="age3">50+</label>
             <br>
             <br>
