--- a/lab13/contact.html
+++ b/lab13/contact.html
@@ -38,23 +38,33 @@
             <form action="https://formspree.io/f/myzkpyez" method="POST" class="form">
     
             <p>Select your age:</p>
-            <input type="radio" id="age1" value="10-19">
-            <label for="age1">10-19</label>
-            <input type="radio" id="age2" value="20-29">
-            <label for="age2">20-29</label>
-            <input type="radio" id="age3" value="30-39">
-            <label for="age3">30-39</label>
-            <input type="radio" id="age4" value="40-49">
-            <label for="age3">40-49</label>
-            <input type="radio" id="age5" value="50+">
-            <label for="age3">50+</label>
+            <label for="age1"></label>
+                <input type="radio" id="age1" value="10-19">
+                10-19
+            </label>
+            <label for="age2">
+                <input type="radio" id="age2" value="20-29">
+                20-29
+            </label>
+            <label for="age3">
+                <input type="radio" id="age3" value="30-39">
+                30-39
+            </label>
+            <label for="age4">
+                <input type="radio" id="age4" value="40-49">
+                40-49
+            </label>
+            <label for="age5">  
+                <input type="radio" id="age5" value="50+">
+                50+
+            </label>
             <br>
             <br>
             <label for="fname">First Name:</label>
-            <input type="text" id="fname" name="fname">
+            <input type="text" id="fname">
             <br>
             <label for="fname">Last Name:</label>
-            <input type="text" id="lname" name="lname">
+            <input type="text" id="lname">
             <br>
             <br>
             <label for="comments">Comments:</label><br>
