--- a/lab13/contact.html
+++ b/lab13/contact.html
@@ -38,7 +38,7 @@
             <form action="https://formspree.io/f/myzkpyez" method="POST" class="form">
     
             <p>Select your age:</p>
-            <label for="age1"></label>
+            <label for="age1">
                 <input type="radio" id="age1" value="10-19">
                 10-19
             </label>
@@ -58,19 +58,23 @@
                 <input type="radio" id="age5" value="50+">
                 50+
             </label>
-            <br>
-            <br>
-            <label for="fname">First Name:</label>
-            <input type="text" id="fname">
-            <br>
-            <label for="fname">Last Name:</label>
-            <input type="text" id="lname">
-            <br>
-            <br>
+        <br>
+        <br>
+            <label for="fname">
+                First Name:
+                <input type="text" id="fname">
+            </label>
+        <br>
+            <label for="fname">
+                Last Name:
+                <input type="text" id="lname">
+            </label>
+        <br>
+        <br>
             <label for="comments">Comments:</label><br>
             <textarea id="comments" name="comments"></textarea>
-            <br>
-            <br><input type="submit" value="Submit" name="submit">
+        <br>
+        <br><input type="submit" value="Submit" name="submit">
             </form>
         </div>
         <div class="row2">
