--- a/lab13/contact.html
+++ b/lab13/contact.html
@@ -61,13 +61,13 @@
         <br>
         <br>
             <label for="fname">
-                First Name:
                 <input type="text" id="fname">
+                First Name:
             </label>
         <br>
-            <label for="fname">
-                Last Name:
+            <label for="lname">
                 <input type="text" id="lname">
+                Last Name:
             </label>
         <br>
         <br>
