--- a/project/index.html
+++ b/project/index.html
@@ -29,6 +29,7 @@
         <button data-filter="france">France</button>
       </div>
     </section>
+  </main>
     <br>
     <footer>
       <p>&copy; 2025. All rights reserved.</p>
