--- a/project7/destinations.html
+++ b/project7/destinations.html
@@ -68,7 +68,7 @@
 
         <!-- Mexico -->
          <div class="gallery-item">
-          <img src="6qhOugTzTpWSVYtlZbxrnQ 2025-05-05 02_59_35.jpg" alt="Mexico">
+          <img src="mexico.jpg" alt="Mexico">
           <p>Mexico</p>
           <p>Mexico is a country in North America known for its rich culture, history, and beautiful landscapes. We went to Mexico for a family vacation and stayed at an all-inclusive resort in Cancun. Although we were in a very big tourist hub we still got out into the jungle to go kayaking, ziplining, and cliff-jumping, which was by far my favorite things during the trip.</p>
          </div>
